--- a/app/views/todo_items/index.html.erb
+++ b/app/views/todo_items/index.html.erb
@@ -1,1 +1,12 @@
-<h1>TodoItems#index</h1>
+<h1><%= @todo_list.title %>></h1>
+    <% if @todo_items.size <= 0 %>
+        <p>No Items found</p>
+    <% else %>
+    <table class="table">
+      <% @todo_items.each do |item| %>
+          <tr>
+            <td><%= item.content %></td>
+          </tr>
+      <% end %>
+    </table>
+    <% end %>
