--- a/app/views/todo_items/index.html.erb
+++ b/app/views/todo_items/index.html.erb
@@ -1,4 +1,4 @@
-<h1><%= @todo_list.title %>></h1>
+<h1><%= @todo_list.title %></h1>
     <% if @todo_items.size <= 0 %>
         <p>No Items found</p>
     <% else %>
@@ -10,3 +10,8 @@
       <% end %>
     </table>
     <% end %>
+
+
+<p>
+  <%= link_to "New Todo Item", new_todo_list_todo_item_path(@todo_list) %>
+</p>
