--- a/app/views/todo_items/index.html.erb
+++ b/app/views/todo_items/index.html.erb
@@ -2,10 +2,12 @@
     <% if @todo_items.size <= 0 %>
         <p>No Items found</p>
     <% else %>
-    <table class="table">
+    <table class="todo_items">
       <% @todo_items.each do |item| %>
-          <tr>
+          <tr id=<%= dom_id(item) %>>
             <td><%= item.content %></td>
+            <td><%= link_to 'Edit Item', edit_todo_list_todo_item_path(@todo_list,item) %></td>
+            <td><%= link_to 'Delete Item', todo_list_todo_item_path(@todo_list,item), method: :delete%></td>
           </tr>
       <% end %>
     </table>
